# FlatCV

./: .clang-format  .gitignore  AGENTS.md  Dockerfile  apply_test.c  benchmark.sh  cli.c  conversion.c  docs.css  doxyfile  flake.nix  flatcv.c  makefile  perspectivetransform.c  readme.md  simplecv.c  test-images.afdesign  test.c
.github/workflows/: ci.yml  publish-book.yml
bindings/flatcv-hs/: .gitignore  README.md  changelog.md  flake.nix  flatcv.cabal  makefile  stack.yaml
bindings/flatcv-hs/src/: FlatCV.hs
bindings/flatcv-hs/src/FlatCV/: Raw.chs
bindings/flatcv-hs/test/: Spec.hs
include/: 1_types.h  binary_closing_disk.h  conversion.h  convert_to_binary.h  corner_peaks.h  crop.h  draw.h  exif.h  extract_document.h  flip.h  foerstner_corner.h  histogram.h  parse_hex_color.h  perspectivetransform.h  qr_code.h  rgba_to_grayscale.h  rotate.h  single_to_multichannel.h  sobel_edge_detection.h  sort_corners.h  trim.h  watershed_segmentation.h
playground/: flatcv.js  image-worker.js  index.html  script.js  style.css
src/: binary_closing_disk.c  cli.c  conversion.c  convert_to_binary.c  corner_detection.c  corner_peaks.c  crop.c  draw.c  exif.c  extract_document.c  flip.c  foerstner_corner.c  histogram.c  parse_hex_color.c  perspectivetransform.c  qr_code.c  rgba_to_grayscale.c  rotate.c  single_to_multichannel.c  sobel_edge_detection.c  sort_corners.c  trim.c  watershed_segmentation.c
tests/: apply_test.c  book.toml  cli.md  generate_qr_test_images.py  qr_codes_difficulty_known_failures.txt  qr_codes_difficulty_manifest.json  qr_difficulty_report.py  test.c  test_amalgamation.c  test_corner_detection.py  test_qr_code.c
tests/cli/: SUMMARY.md  benchmark.md  binarize.md  blur.md  border.md  changelog.md  corner-detection.md  crop.md  document-extraction.md  draw.md  faq.md  flip.md  grayscale.md  haskell-bindings.md  histogram.md  introduction.md  morphology.md  qr-code.md  resize.md  rotate.md  segmentation.md  trim.md  usage.md
(+24 files in other folders)
